8195808: Eliminate dependency on sun.print in javafx.graphics
Reviewed-by: kcr